webapp/src/components/AuctionPage/AuctionPage.css
.AuctionPage .subtitle {
  color: var(--gray);
  margin-bottom: 5px;
}

.AuctionPage .parcel-preview {
  height: 400px;
}

.AuctionPage .auction-details {
  margin: 30px 0;
}

.AuctionPage .information-blocks {
  display: flex;
  justify-content: space-between;
}

.AuctionPage .information-block .ui.header {
  margin-top: 0;
}

.AuctionPage .parcels-included-description {
  font-size: 18px;
  margin: 15px 0 0;
}

.AuctionPage .auction-details .selected-parcels.column {
  display: flex;
  flex-wrap: wrap;
}

.AuctionPage .parcels-included {
  display: flex;
  flex-wrap: wrap;
  width: 100%;
  margin-top: 40px;
}

.AuctionPage .ParcelAttributes {
  margin-top: 20px;
  flex-basis: 8%;
}

@media (max-width: 768px) {
  .AuctionPage .information-blocks {
    display: block;
    text-align: center;
  }
}

@media (max-width: 992px) {
  .AuctionPage .information-block {
    margin-top: 20px;
  }
}

